crates/nsl-codegen/tests/snapshots/bitnet_ptx_snapshots__bitnet_ptx__finalize_basic.snap
---
source: crates/nsl-codegen/tests/bitnet_ptx_snapshots.rs
expression: ptx
---
// === BitNet finalize ===
// weight_scale: %f_y_out *= ld.param.f32 weight_scale.
ld.param.f32 %f_w_scale, [weight_scale];
mul.f32 %f_y_out, %f_y_out, %f_w_scale;
// Cast FP32 -> F16/BF16 and store to HBM.
cvt.rn.f16.f32 %h_y, %f_y_out;
mul.lo.u32 %r_yoff, %r_row_id, %r_out_dim;
add.u32 %r_yoff, %r_yoff, %r_col_id;
shl.b32 %r_yoff, %r_yoff, 1;
cvt.u64.u32 %rd_yoff, %r_yoff;
add.s64 %rd_y_addr, %rd_y_out, %rd_yoff;
st.global.b16 [%rd_y_addr], %h_y;
// === end BitNet finalize ===
