crates/nsl-codegen/tests/snapshots/bitnet_ptx_snapshots__bitnet_ptx__finalize_bias_residual.snap
---
source: crates/nsl-codegen/tests/bitnet_ptx_snapshots.rs
expression: ptx
---
// === BitNet finalize ===
// weight_scale: %f_y_out *= ld.param.f32 weight_scale.
ld.param.f32 %f_w_scale, [weight_scale];
mul.rn.f32 %f_y_out, %f_y_out, %f_w_scale;
// Bias add: load bias[col_id] from global and add to accumulator.
cvt.u64.u32 %rd_bias_off, %r_col_id;
shl.b64 %rd_bias_off, %rd_bias_off, 2;
add.s64 %rd_bias_addr, %rd_bias, %rd_bias_off;
ld.global.f32 %f_bias, [%rd_bias_addr];
add.f32 %f_y_out, %f_y_out, %f_bias;
// Residual add: load residual[row, col] (FP32) and add.
mul.wide.u32 %rd_res_off, %r_row_id, %r_out_dim;
cvt.u64.u32 %rd_tmp, %r_col_id;
add.s64 %rd_res_off, %rd_res_off, %rd_tmp;
shl.b64 %rd_res_off, %rd_res_off, 2;
add.s64 %rd_res_addr, %rd_residual, %rd_res_off;
ld.global.f32 %f_res, [%rd_res_addr];
add.f32 %f_y_out, %f_y_out, %f_res;
// Cast FP32 -> F16/BF16 and store to HBM.
cvt.rn.f16.f32 %h_y, %f_y_out;
mul.wide.u32 %rd_yoff, %r_row_id, %r_out_dim;
cvt.u64.u32 %rd_tmp, %r_col_id;
add.s64 %rd_yoff, %rd_yoff, %rd_tmp;
shl.b64 %rd_yoff, %rd_yoff, 1;
add.s64 %rd_y_addr, %rd_y_out, %rd_yoff;
st.global.b16 [%rd_y_addr], %h_y;
// === end BitNet finalize ===
