crates/nsl-codegen/tests/snapshots/bitnet_ptx_snapshots__bitnet_ptx__quantized_ternary_gemm_basic.snap
---
source: crates/nsl-codegen/tests/bitnet_ptx_snapshots.rs
expression: ptx
---
// === BitNet fused quantized_ternary_gemm ===
// Phase 1/2: absmax activation quantization prologue.
// === BitNet absmax_quant (hidden_dim=1024) ===
// Per-thread: track max(|x[r, k]|) over a grid-stride slice of the row.
mov.f32 %f_max, 0f00000000;
mov.u32 %r_k, %r_tid;
ABSMAX_LOOP:
setp.ge.u32 %p_amdone, %r_k, %r_hidden_dim;
@%p_amdone bra ABSMAX_END;
mul.wide.u32 %rd_off, %r_row_id, %r_hidden_dim;
cvt.u64.u32 %rd_tmp, %r_k;
add.s64 %rd_off, %rd_off, %rd_tmp;
shl.b64 %rd_off, %rd_off, 1;
add.s64 %rd_addr, %rd_act_in, %rd_off;
ld.global.b16 %h_x, [%rd_addr];
cvt.f32.f16 %f_x, %h_x;
abs.f32 %f_absx, %f_x;
max.f32 %f_max, %f_max, %f_absx;
add.u32 %r_k, %r_k, %r_nthreads;
bra ABSMAX_LOOP;
ABSMAX_END:
// Warp-shuffle butterfly reduction (parallel, not serialized).
mov.b32 %r_shfl_a, %f_max;
shfl.sync.bfly.b32 %r_shfl_b, %r_shfl_a, 16, 0x1f, 0xffffffff;
mov.b32 %f_partial, %r_shfl_b;
max.f32 %f_max, %f_max, %f_partial;
mov.b32 %r_shfl_a, %f_max;
shfl.sync.bfly.b32 %r_shfl_b, %r_shfl_a, 8, 0x1f, 0xffffffff;
mov.b32 %f_partial, %r_shfl_b;
max.f32 %f_max, %f_max, %f_partial;
mov.b32 %r_shfl_a, %f_max;
shfl.sync.bfly.b32 %r_shfl_b, %r_shfl_a, 4, 0x1f, 0xffffffff;
mov.b32 %f_partial, %r_shfl_b;
max.f32 %f_max, %f_max, %f_partial;
mov.b32 %r_shfl_a, %f_max;
shfl.sync.bfly.b32 %r_shfl_b, %r_shfl_a, 2, 0x1f, 0xffffffff;
mov.b32 %f_partial, %r_shfl_b;
max.f32 %f_max, %f_max, %f_partial;
mov.b32 %r_shfl_a, %f_max;
shfl.sync.bfly.b32 %r_shfl_b, %r_shfl_a, 1, 0x1f, 0xffffffff;
mov.b32 %f_partial, %r_shfl_b;
max.f32 %f_max, %f_max, %f_partial;
// Cross-warp: lane 0 of each warp publishes its partial to SMEM.
and.b32 %r_lane, %r_tid, 31;
shr.u32 %r_warp, %r_tid, 5;
setp.ne.u32 %p_lane0, %r_lane, 0;
@%p_lane0 bra ABSMAX_SKIP_PUBLISH;
shl.b32 %r_addr32, %r_warp, 2;
add.u32 %r_addr32, %r_red_base, %r_addr32;
st.shared.f32 [%r_addr32], %f_max;
ABSMAX_SKIP_PUBLISH:
bar.sync 0;
// Thread 0 reduces the per-warp partials and publishes the row scale.
setp.ne.u32 %p_t0, %r_tid, 0;
@%p_t0 bra ABSMAX_SKIP_FINAL;
add.u32 %r_nwarps, %r_nthreads, 31;
shr.u32 %r_nwarps, %r_nwarps, 5;
mov.f32 %f_max, 0f00000000;
mov.u32 %r_i, 0;
ABSMAX_RED_LOOP:
setp.ge.u32 %p_rdone, %r_i, %r_nwarps;
@%p_rdone bra ABSMAX_RED_END;
shl.b32 %r_addr32, %r_i, 2;
add.u32 %r_addr32, %r_red_base, %r_addr32;
ld.shared.f32 %f_partial, [%r_addr32];
max.f32 %f_max, %f_max, %f_partial;
add.u32 %r_i, %r_i, 1;
bra ABSMAX_RED_LOOP;
ABSMAX_RED_END:
st.shared.f32 [%r_scale_base], %f_max;
ABSMAX_SKIP_FINAL:
bar.sync 0;
ld.shared.f32 %f_scale, [%r_scale_base];
// %f_scale now holds the row-wide absmax on every thread.
// Zero-magnitude row guard: scale == 0 -> q = 0 for every element.
setp.eq.f32 %p_zero, %f_scale, 0f00000000;
// Per-thread quantize: q = round(clip(x * 127.0 / scale, -127, 127)).
mov.f32 %f_inv_scale, 0f42FE0000;
div.rn.f32 %f_inv_scale, %f_inv_scale, %f_scale;
mov.f32 %f_half, 0f3F000000;
mov.u32 %r_k, %r_tid;
QUANT_LOOP:
setp.ge.u32 %p_qdone, %r_k, %r_hidden_dim;
@%p_qdone bra QUANT_END;
mul.wide.u32 %rd_off, %r_row_id, %r_hidden_dim;
cvt.u64.u32 %rd_tmp, %r_k;
add.s64 %rd_off, %rd_off, %rd_tmp;
shl.b64 %rd_off, %rd_off, 1;
add.s64 %rd_addr, %rd_act_in, %rd_off;
ld.global.b16 %h_xq, [%rd_addr];
cvt.f32.f16 %f_x, %h_xq;
mul.f32 %f_scaled, %f_x, %f_inv_scale;
max.NaN.f32 %f_clip, %f_scaled, 0fC2FE0000;
min.NaN.f32 %f_clip, %f_clip, 0f42FE0000;
// Round half AWAY FROM ZERO to match the CPU reference's f32::round
// (cvt.rni would round half to even and disagree by one int8 step).
copysign.f32 %f_rndbias, %f_clip, %f_half;
add.f32 %f_rnd, %f_clip, %f_rndbias;
cvt.rzi.s32.f32 %r_qi, %f_rnd;
selp.b32 %r_qi, 0, %r_qi, %p_zero;
cvt.u16.u32 %rs_qi8, %r_qi;
add.u32 %r_addr32, %r_qact_base, %r_k;
st.shared.s8 [%r_addr32], %rs_qi8;
add.u32 %r_k, %r_k, %r_nthreads;
bra QUANT_LOOP;
QUANT_END:
bar.sync 0;
// === end BitNet absmax_quant ===
// Phase 2/2: ternary GEMM body (consumes quantized activations + scale).
// === BitNet ternary_gemm (hidden_dim=1024) ===
// Columns past out_dim have no work. Guarded AFTER the last bar.sync so
// early-exiting threads cannot strand their CTA peers at a barrier.
setp.ge.u32 %p_cguard, %r_col_id, %r_out_dim;
@%p_cguard bra BITNET_EXIT;
// Init i32 accumulator for this thread's (row, col) output.
mov.s32 %r_acc, 0;
// Base flat trit index of this column's weight row: col_id * hidden_dim.
mul.lo.u32 %r_wbase, %r_col_id, %r_hidden_dim;
mov.u32 %r_k, 0;
// Inner loop: acc += sum over 4 consecutive k per packed weight byte.
GEMM_LOOP:
setp.ge.u32 %p_gdone, %r_k, %r_hidden_dim;
@%p_gdone bra GEMM_END;
add.u32 %r_trit_index, %r_wbase, %r_k;
// === BitNet packed_load unpack ===
// Compute byte offset = trit_offset >> 2 (4 trits per byte).
shr.b32 %r_byte_offset, %r_trit_index, 2;
cvt.u64.u32 %rd_byte_off_64, %r_byte_offset;
add.s64 %rd_weight_addr, %rd_w_packed, %rd_byte_off_64;
ld.global.u8 %r_packed_word, [%rd_weight_addr];
// Unpack 4 trits per byte using bit-field extract (single SASS at sm_80+).
// HIGH-BITS-FIRST: trit[0] at bits [7:6]; trit[3] at bits [1:0].
bfe.u32 %r_trit0, %r_packed_word, 6, 2;
bfe.u32 %r_trit1, %r_packed_word, 4, 2;
bfe.u32 %r_trit2, %r_packed_word, 2, 2;
bfe.u32 %r_trit3, %r_packed_word, 0, 2;
// Decode: trit_value = bits - 1 (00 -> -1, 01 -> 0, 10 -> +1).
sub.s32 %r_t0_val, %r_trit0, 1;
sub.s32 %r_t1_val, %r_trit1, 1;
sub.s32 %r_t2_val, %r_trit2, 1;
sub.s32 %r_t3_val, %r_trit3, 1;
// === end BitNet packed_load unpack ===
add.u32 %r_addr32, %r_qact_base, %r_k;
ld.shared.s8 %rs_qact, [%r_addr32];
cvt.s32.s16 %r_qact_i32, %rs_qact;
mul.lo.s32 %r_prod, %r_qact_i32, %r_t0_val;
add.s32 %r_acc, %r_acc, %r_prod;
ld.shared.s8 %rs_qact, [%r_addr32+1];
cvt.s32.s16 %r_qact_i32, %rs_qact;
mul.lo.s32 %r_prod, %r_qact_i32, %r_t1_val;
add.s32 %r_acc, %r_acc, %r_prod;
ld.shared.s8 %rs_qact, [%r_addr32+2];
cvt.s32.s16 %r_qact_i32, %rs_qact;
mul.lo.s32 %r_prod, %r_qact_i32, %r_t2_val;
add.s32 %r_acc, %r_acc, %r_prod;
ld.shared.s8 %rs_qact, [%r_addr32+3];
cvt.s32.s16 %r_qact_i32, %rs_qact;
mul.lo.s32 %r_prod, %r_qact_i32, %r_t3_val;
add.s32 %r_acc, %r_acc, %r_prod;
add.u32 %r_k, %r_k, 4;
bra GEMM_LOOP;
GEMM_END:
// Dequant: y = (scale / 127.0) * acc.
cvt.rn.f32.s32 %f_acc, %r_acc;
mov.f32 %f_127, 0f42FE0000;
div.rn.f32 %f_inv127_scale, %f_scale, %f_127;
mul.f32 %f_y_out, %f_inv127_scale, %f_acc;
// === end BitNet ternary_gemm ===
// === end BitNet fused quantized_ternary_gemm ===
