crates/nsl-codegen/tests/snapshots/bitnet_ptx_snapshots__bitnet_ptx__ternary_gemm_basic.snap
---
source: crates/nsl-codegen/tests/bitnet_ptx_snapshots.rs
expression: ptx
---
// === BitNet ternary_gemm (hidden_dim=1024) ===
// Columns past out_dim have no work. Guarded AFTER the last bar.sync so
// early-exiting threads cannot strand their CTA peers at a barrier.
setp.ge.u32 %p_cguard, %r_col_id, %r_out_dim;
@%p_cguard bra BITNET_EXIT;
// Init i32 accumulator for this thread's (row, col) output.
mov.s32 %r_acc, 0;
// Base flat trit index of this column's weight row: col_id * hidden_dim.
mul.lo.u32 %r_wbase, %r_col_id, %r_hidden_dim;
mov.u32 %r_k, 0;
// Inner loop: acc += sum over 4 consecutive k per packed weight byte.
GEMM_LOOP:
setp.ge.u32 %p_gdone, %r_k, %r_hidden_dim;
@%p_gdone bra GEMM_END;
add.u32 %r_trit_index, %r_wbase, %r_k;
// === BitNet packed_load unpack ===
// Compute byte offset = trit_offset >> 2 (4 trits per byte).
shr.b32 %r_byte_offset, %r_trit_index, 2;
cvt.u64.u32 %rd_byte_off_64, %r_byte_offset;
add.s64 %rd_weight_addr, %rd_w_packed, %rd_byte_off_64;
ld.global.u8 %r_packed_word, [%rd_weight_addr];
// Unpack 4 trits per byte using bit-field extract (single SASS at sm_80+).
// HIGH-BITS-FIRST: trit[0] at bits [7:6]; trit[3] at bits [1:0].
bfe.u32 %r_trit0, %r_packed_word, 6, 2;
bfe.u32 %r_trit1, %r_packed_word, 4, 2;
bfe.u32 %r_trit2, %r_packed_word, 2, 2;
bfe.u32 %r_trit3, %r_packed_word, 0, 2;
// Decode: trit_value = bits - 1 (00 -> -1, 01 -> 0, 10 -> +1).
sub.s32 %r_t0_val, %r_trit0, 1;
sub.s32 %r_t1_val, %r_trit1, 1;
sub.s32 %r_t2_val, %r_trit2, 1;
sub.s32 %r_t3_val, %r_trit3, 1;
// === end BitNet packed_load unpack ===
add.u32 %r_addr32, %r_qact_base, %r_k;
ld.shared.s8 %rs_qact, [%r_addr32];
cvt.s32.s16 %r_qact_i32, %rs_qact;
mul.lo.s32 %r_prod, %r_qact_i32, %r_t0_val;
add.s32 %r_acc, %r_acc, %r_prod;
ld.shared.s8 %rs_qact, [%r_addr32+1];
cvt.s32.s16 %r_qact_i32, %rs_qact;
mul.lo.s32 %r_prod, %r_qact_i32, %r_t1_val;
add.s32 %r_acc, %r_acc, %r_prod;
ld.shared.s8 %rs_qact, [%r_addr32+2];
cvt.s32.s16 %r_qact_i32, %rs_qact;
mul.lo.s32 %r_prod, %r_qact_i32, %r_t2_val;
add.s32 %r_acc, %r_acc, %r_prod;
ld.shared.s8 %rs_qact, [%r_addr32+3];
cvt.s32.s16 %r_qact_i32, %rs_qact;
mul.lo.s32 %r_prod, %r_qact_i32, %r_t3_val;
add.s32 %r_acc, %r_acc, %r_prod;
add.u32 %r_k, %r_k, 4;
bra GEMM_LOOP;
GEMM_END:
// Dequant: y = (scale / 127.0) * acc.
cvt.rn.f32.s32 %f_acc, %r_acc;
mov.f32 %f_127, 0f42FE0000;
div.rn.f32 %f_inv127_scale, %f_scale, %f_127;
mul.f32 %f_y_out, %f_inv127_scale, %f_acc;
// === end BitNet ternary_gemm ===
